--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -845,6 +845,7 @@ header.font_black .btn_login_box li a::before {
     width: 15px;
     height: 15px;
     transform: translateY(-50%);
+    background-color: transparent;
 }
 .company_img .swiper-button-prev {
     left: 20px;
@@ -4115,101 +4116,220 @@ a.ico_folder::after {
 }
 
 /* 개인정보처리방침 */
-.txt_content_box {
+.txt_content {
     padding: 50px 40px;
     background-color: #fafafa;
 }
-.txt_content_box .txt_right {
+.txt_content .tit_box {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    margin-bottom: 50px;
+}
+.txt_content .tit_box p {
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+}
+.txt_content .tit_box p span {
+    font-weight: 500;
+}
+.txt_content .tit_box .txt_right {
     display: flex;
     justify-content: flex-end;
+    font-weight: 400;
+}
+.txt_item {
+    line-height: 25px;
     margin-bottom: 30px;
-    font-weight: 400;
 }
-.txt_content_box p {
-    font-weight: 400;
-}
-
-/* 서비스 이용약관 */
 .txt_item > dt {
-    margin-bottom: 25px;
-    font-size: 30px;
-    font-weight: 600;
-    color: #5158bd;
-}
-.txt_item > dd {
-    padding: 0 10px;
-    box-sizing: border-box;
-}
-.txt_item > dd > p {
-    margin-bottom: 10px;
-}
-.txt_item > dd dl + dl {
-    margin-top: 20px;
-}
-.txt_item > dd dt {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     font-size: 20px;
     font-weight: 600;
 }
-.txt_item > dd dd {
-    margin-bottom: 5px;
-    font-weight: 400;
+.txt_item > dd {
+    font-weight: 500;
 }
-.txt_item + .txt_item {
-    margin-top: 40px;
-}
-
-/* 이메일무단수집거부 */
-p + .txt_list {
-    margin-top: 30px;
-}
-.txt_list dt {
+.txt_item > dd > strong {
     font-weight: 600;
 }
-.txt_list dd {
-    margin-top: 10px;
+.txt_item > dd > strong span {
+    font-weight: 600;
 }
-.txt_list dd ol {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+.txt_item_list {
+    padding: 10px 0;
 }
-.txt_list dd ol li {
-    display: flex;
+.txt_item_list > li {
+    font-weight: 500;
+}
+.txt_item_list > li + li {
+    margin-top: 15px;
+}
+.txt_item_list dl dt {
+    font-weight: 500;
+}
+.txt_item_list dl dd {
+    font-weight: 500;
+}
+.txt_item_numlist > li {
     position: relative;
     padding-left: 30px;
+    font-weight: 500;
 }
-.txt_list dd ol li::before {
-    content: "";
-    display: flex;
+.txt_item_numlist > li + li {
+    margin-top: 15px;
+}
+.txt_item_numlist > li .l_num {
+    display: inline-flex;
+    position: absolute;
+    top: 0;
+    left: 0;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    top: 1px;
-    left: 0;
-    width: 20px;
-    height: 20px;
+    width: 23px;
+    height: 23px;
     background-color: #333;
     border-radius: 50%;
-    margin-right: 10px;
+    font-weight: 600;
     font-size: 12px;
-    font-weight: 500;
     color: #fff;
 }
-.txt_list dd ol li:nth-child(1)::before {content: "1";}
-.txt_list dd ol li:nth-child(2)::before {content: "2";}
-.txt_list dd ol li:nth-child(3)::before {content: "3";}
-.txt_list dd ol li:nth-child(4)::before {content: "4";}
-.txt_list dd ol li:nth-child(5)::before {content: "5";}
-.txt_list dd ol li:nth-child(6)::before {content: "6";}
-.txt_list dd ol li:nth-child(7)::before {content: "7";}
-.txt_list dd ol li:nth-child(8)::before {content: "8";}
-.txt_list dd ol li:nth-child(9)::before {content: "9";}
-.txt_list dd ol li:nth-child(10)::before {content: "10";}
-.txt_list dd ol li:nth-child(11)::before {content: "11";}
-.txt_list dd ol li:nth-child(12)::before {content: "12";}
-.txt_list dd ol li:nth-child(13)::before {content: "13";}
-.txt_list dd ol li:nth-child(14)::before {content: "14";}
+.txt_item_step {
+    margin-top: 10px;
+}
+.txt_item_step p {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 500;
+}
+.txt_item_step p strong {
+    position: relative;
+    margin-bottom: 3px;
+    margin-right: 5px;
+    font-weight: 600;
+}
+.txt_item_step p strong::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #333;
+}
+.txt_item_step dl {
+    display: flex;
+}
+.txt_item_step dl dt {
+    min-width: 68px;
+    margin-right: 5px;
+    font-weight: 500;
+}
+.txt_item_step dl dt span {
+    font-weight: 500;
+}
+.txt_item_step dl dd {
+    max-width: 75%;
+    font-weight: 500;
+}
+.txt_item_dotlist {
+    margin: 10px 0;
+}
+.txt_item_dotlist li {
+    position: relative;
+    line-height: 30px;
+    padding-left: 10px;
+    font-weight: 500;
+}
+.txt_item_dotlist li::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: #333;
+}
+.txt_item .tbl_box {
+    margin: 15px 0;
+    border-top: 2px solid #333;
+}
+.txt_item .tbl_box table thead tr th {
+    background-color: #e6e6e6;
+    padding: 15px 10px;
+    border-right: 1px solid #adadad;
+    border-bottom: 1px solid #adadad;
+    word-break: keep-all;
+    text-align: center;
+}
+.txt_item .tbl_box table thead tr th:first-child {
+    border-left: 1px solid #adadad;
+}
+.txt_item .tbl_box table tbody tr th,
+.txt_item .tbl_box table tbody tr td {
+    border-right: 1px solid #adadad;
+    border-bottom: 1px solid #adadad;
+    padding: 10px;
+    word-break: keep-all;
+    font-weight: 500;
+}
+.txt_item .tbl_box table tbody tr th:first-child,
+.txt_item .tbl_box table tbody tr td:first-child {
+    border-left: 1px solid #adadad;
+}
+.txt_item_detail {
+    margin-top: 15px;
+    font-weight: 500;
+}
+.txt_item_detail .tit {
+    display: inline-block;
+    padding: 5px 15px;
+    background-color: #333;
+    border-radius: 20px;
+    margin: 15px 0 10px;
+    color: #fff;
+}
+.txt_item_detail ol li {
+    font-size: 15px;
+    font-weight: 400;
+}
+.txt_item_detail dl dt,
+.txt_item_detail dl dd {
+    font-size: 15px;
+    font-weight: 400;
+}
+.txt_item_detail dl + dl {
+    margin-top: 5px;
+}
+.txt_item_detail .blue_dl {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.txt_item_detail .blue_dl strong {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: 500;
+    color: #036ec8;
+}
+.txt_item_detail .blue_dl dl {
+    display: flex;
+    align-items: center;
+}
+.txt_item_detail .blue_dl dl dt,
+.txt_item_detail .blue_dl dl dd {
+    font-size: 16px;
+    font-weight: 500;
+    color: #036ec8;
+}
+.txt_item_detail .blue_dl dl dt {
+    margin-right: 5px;
+}
 
 /* 에러페이지 */
 .error_page {
@@ -6471,39 +6591,96 @@ footer .footer_bottom {
     }
 
     /* 개인정보처리방침 */
-    .txt_content_box {
-        padding: 15px;
+    .txt_content {
+        padding: 10px 15px;    
     }
-    .txt_content_box .txt_right {
-        margin-bottom: 15px;
+    .txt_content .tit_box {
+        gap: 15px;
+        margin-bottom: 10px;
+    }
+    .txt_content .tit_box p {
+        font-size: 15px;
+        word-break: keep-all;
+    }
+    .txt_item {
+        line-height: 23px;
+    }
+    .txt_item > dt {
+        font-size: 16px;
+    }
+    .txt_item > dd > strong {
         font-size: 14px;
     }
-    .txt_content_box p {
+    .txt_item_list dl dt,
+    .txt_item_list dl dd {
         font-size: 14px;
     }
-
-    /* 이메일무단수집거부 */
-    .txt_list dd ol li::before {
-        width: 15px;
-        height: 15px;
-        font-size: 11px;
-    }
-    .txt_list dd ol li {
+    .txt_item_numlist > li {
         padding-left: 20px;
         font-size: 14px;
     }
-
-    /* 서비스 이용약관 */
-    .txt_item > dt {
-        margin-bottom: 15px;
-        font-size: 17px;
+    .txt_item_numlist > li .l_num {
+        top: 3px;
+        width: 15px;
+        height: 15px;
+        font-size: 10px;
     }
-    .txt_item > dd dt {
-        font-size: 16px;
-    }
-    .txt_item > dd dd {
+    .txt_item_step p {
+        display: block;
         font-size: 14px;
     }
+    .txt_item_step dl dt {
+        min-width: 59px;
+    }
+    .txt_item_dotlist li {
+        line-height: 20px;
+    }
+    .txt_item_dotlist li + li {
+        margin-top: 5px;
+    }
+    .txt_item_step dl {
+        flex-wrap: wrap;
+    }
+    .txt_item_step dl + dl {
+        margin-top: 5px;
+    }
+    .txt_item_step dl dd {
+        max-width: 100%;
+    }
+    .txt_item .tbl_box table thead tr th {
+        padding: 5px 10px;
+    }
+    .txt_item .tbl_box table tbody tr th,
+    .txt_item .tbl_box table tbody tr td {
+        padding: 5px 10px;
+        font-size: 14px;
+    }
+    .txt_item_detail ol li {
+        font-size: 14px;
+    }
+    .txt_item_detail dl dt,
+    .txt_item_detail dl dd {
+        font-size: 14px;
+    }
+    .txt_item_list > li {
+        font-size: 14px;
+    }
+    .txt_item_detail .blue_dl dl dt,
+    .txt_item_detail .blue_dl dl dd {
+        font-size: 14px;
+    }
+    .txt_item_detail .blue_dl dl {
+        align-items: flex-start;
+    }
+    .txt_item_detail .blue_dl dl dd {
+        max-width: calc(100% - 55px);
+    }
+
+    /* 이메일무단수집거부 */
+    
+
+    /* 서비스 이용약관 */
+    
 
     /* 에러페이지 */
     .error_page .top {
