통계-투자실적 수정(고객요청)

--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -3785,7 +3785,7 @@ a.ui-button:active,
     }
     .tab_group .tab_btn ul {
         overflow-x: auto;
-        overflow-y: inherit;
+        overflow-y: hidden;
         gap: 15px;
         padding-bottom: 15px;
         border-bottom: none;
