--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -705,6 +705,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px 0;
+    width: 100%;
 }
 .chk_box + .chk_box {
     margin-top: 10px; /* 예비용 */
