--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -1035,6 +1035,21 @@ a.ico_folder::after {
     flex-direction: column;
     align-items: center;
 }
+.transaction_procedure_box ul li::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 24%;
+    right: -17%;
+    width: 30px;
+    height: 30px;
+    border: 2px solid #0060ef;
+    border-width: 0 2px 2px 0;
+    transform: rotate(-45deg);
+}
+.transaction_procedure_box ul li:last-child::after {
+    display: none;
+}
 .transaction_procedure_box ul li span {
     display: flex;
     position: relative;
@@ -5594,6 +5609,9 @@ footer .footer_bottom {
     .transaction_procedure_box ul {
         justify-content: space-between;
         gap: 10px;
+    }
+    .transaction_procedure_box ul li::after {
+        right: -28%;
     }
     .transaction_procedure_box ul li span {
         width: 100px;
