--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -399,13 +399,13 @@
 
 /* list 리스트 */
 .content_list_box .tit_box h4 {
-    margin: 35px 0 20px;
+    margin: 60px 0 20px;
 }
 .content_list_box .list_item + .list_item {
     margin-top: 30px;
 }
 .list_item.bd_b {
-    padding-bottom: 35px;
+    padding-bottom: 60px;
     border-bottom: 1px solid #d9e1e7;
 }
 .content_list_box dl {
@@ -3162,6 +3162,9 @@ a.ui-button:active,
     }
 
     /* list 리스트 */
+    .content_list_box .tit_box h4 {
+        margin-top: 35px;
+    }
     .content_list_box dl {
         gap: 15px;
         padding: 0 15px;
