--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -2426,15 +2426,12 @@ a.ico_folder::after {
 .reporting_misconduct_box .report_info {
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 20px;
     margin-bottom: 50px;
 }
 .reporting_misconduct_box .report_info > div {
-    flex: 1;
+    width: 100%;
     height: 100%;
-}
-.reporting_misconduct_box .report_info > div .content_list_box.type_02 dl {
-    min-height: 207px;
 }
 .procedure_box .step {
     margin-bottom: 90px;
@@ -2453,7 +2450,7 @@ a.ico_folder::after {
     box-sizing: border-box;
     margin-right: 61px;
     margin-left: -61px;
-    min-width: 180px;
+    width: calc(100% / 3);
     height: 122px;
     box-shadow: 8px 7px 7px 1px rgb(0 0 0 / 16%);
 }
@@ -2470,21 +2467,17 @@ a.ico_folder::after {
     z-index: 1;
 }
 .procedure_box .step ul li:nth-child(1) {
-    width: calc((100% - 430px) / 3);
     background-image: url(../images/bg/step_bg_01.png);
     margin-left: 0;
     padding-left: 40px;
 }
 .procedure_box .step ul li:nth-child(2) {
-    width: 397px;
     background-image: url(../images/bg/step_bg_02.png);
 }
 .procedure_box .step ul li:nth-child(3) {
-    width: calc((100% - 430px) / 3);
     background-image: url(../images/bg/step_bg_03.png);
 }
 .procedure_box .step ul li:nth-child(4) {
-    width: calc((100% - 430px) / 3);
     background-image: url(../images/bg/step_bg_04.png);
 }
 .procedure_box .step ul li:nth-child(1)::after {
@@ -2505,6 +2498,7 @@ a.ico_folder::after {
     color: #fff;
 }
 .procedure_box .step ul li strong {
+    word-break: keep-all;
     font-size: 25px;
     font-weight: 600;
     color: #fff;
@@ -6099,7 +6093,7 @@ footer .footer_bottom {
         background-repeat: repeat;
     }
     .procedure_box .step ul li:nth-child(1) {
-        width: calc(30% - 61px);
+        width: 43%;
     }
     .procedure_box .step ul li:nth-child(2) {
         width: calc(85% - 61px);
