footer 컨텐츠내용 추가 및 회원가입 약관쪽 내용 수정

--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -4253,6 +4253,7 @@ a.ico_folder::after {
     font-weight: 600;
 }
 .txt_item > dd {
+    word-break: keep-all;
     font-weight: 500;
 }
 .txt_item > dd > span {
