--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -640,6 +640,10 @@
     border-width: 0 1px 1px 0;
     transform: rotate(45deg) translate(-50%, -50%);
 }
+.sel_box select:disabled {
+    background-color: #f5f5f5;
+    color: #aaa;
+}
 
 /* rdo_box 라디오박스 */
 .rdo_box {
@@ -1069,6 +1073,9 @@
 }
 .inp_group.inp_txt .inp_box {
     width: 100px;
+}
+.inp_group.inp_txt .inp_box.min {
+    width: 30%;
 }
 
 .image_file_box ul {
@@ -3334,6 +3341,9 @@ a.ui-button:active,
     }
     .inp_group.inp_txt {
         justify-content: center;
+    }
+    .inp_group.inp_txt .inp_box.min {
+        width: calc(100% - 17px);
     }
 
     /* 테이블 */
