--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -352,6 +352,12 @@
     border-radius: 4px;
     margin-right: 10px;
 }
+.tit_box h4 em {
+    margin-left: 10px;
+    font-size: 15px;
+    font-weight: 400;
+    font-style: normal;
+}
 .tit_box.row .btn_box {
     flex: none;
     width: auto;
@@ -388,6 +394,12 @@
 }
 .tit_box.rowsel span {
     margin-bottom: 0;
+}
+.tit_box .sub_tit_box {
+    display: block;
+    margin-top: -20px;
+    margin-bottom: 30px;
+    font-weight: 400;
 }
 
 .req {
@@ -526,7 +538,10 @@
     margin: 30px 0;
 }
 .tbl_box_data + .tit_box {
-    margin-top: 40px;
+    margin-top: 50px;
+}
+.tbl_box + .tit_box {
+    margin-top: 50px;
 }
 .content_list_box .content {
     padding: 25px 35px;
@@ -542,6 +557,11 @@
     border: none;
     box-shadow: none;
     border-radius: 0;
+}
+.txt_p {
+    margin: 10px 0 20px;
+    font-size: 15px;
+    font-weight: 400;
 }
 
 /* input 인풋 */
@@ -608,6 +628,7 @@
 .sel_box {
     display: flex;
     position: relative;
+    max-width: 100%;
 }
 .sel_box.min {
     max-width: 160px;
@@ -801,6 +822,9 @@
 }
 .chk_box.solo input + label {
     padding-left: 19px;
+}
+.chk_box.solo.left {
+    justify-content: flex-start;
 }
 
 /* 혼합 인풋박스 */
@@ -1003,6 +1027,9 @@
 .inp_group.email .sel_box {
     width: 250px;
 }
+.inp_group.email .chk_box span {
+    width: auto;
+}
 .inp_group .rdo_box {
     gap: 15px;
 }
@@ -1021,6 +1048,9 @@
 }
 .inp_group.company_num .inp_group .inp_box:nth-child(3) {
     flex: 2;
+}
+.inp_group.company_num.max .inp_group {
+    width: 100%;
 }
 .inp_group.rdo_inp .inp_box {
     width: 100px;
@@ -1067,6 +1097,9 @@
 .inp_group.period_chk .chk_box span {
     width: auto;
 }
+.inp_group.period.min .inp_box {
+    width: calc(50% - 10px);
+}
 .inp_group.inp_txt {
     display: flex;
     flex-wrap: nowrap;
@@ -1076,6 +1109,26 @@
 }
 .inp_group.inp_txt .inp_box.min {
     width: 30%;
+}
+.inp_group.inp_txt .txt {
+    font-size: 15px;
+    font-weight: 400;
+}
+.inp_group.inp_txt .txt.f_color_orange {
+    font-size: 13px;
+}
+.inp_group.representative {
+    display: flex;
+}
+.inp_group.representative .inp_box {
+    width: 15%;
+}
+.inp_group.txt_chk {
+    display: flex;
+}
+.inp_group.sel_sel {
+    display: flex;
+    justify-content: center;
 }
 
 .image_file_box ul {
@@ -1176,6 +1229,22 @@
 }
 .tbl_in_group .btn_box * {
     font-size: 15px;
+}
+.tbl_in_group.right {
+    align-items: flex-end;
+}
+.tbl_in_group.right .tbl_box {
+    width: 100%;
+}
+.tbl_in_group.right .btn_box {
+    max-width: none;
+}
+.tbl_in_group.right .btn_box * {
+    flex: none;
+    width: auto;
+}
+.tbl_in_group.right + .tit_box {
+    margin-top: 40px;
 }
 
 /* 테이블 타입0 :: 데이터 테이블 */
@@ -1970,10 +2039,12 @@
 .list_group_info .top .tit strong {
     display: block;
     margin-bottom: 20px;
+    word-break: break-all;
     font-size: 21px;
     font-weight: 500;
 }
 .list_group_info .top .tit span {
+    word-break: break-all;
     font-size: 14px;
     font-weight: 400;
 }
@@ -2524,6 +2595,11 @@
 .tbl_card_list.type_02 a .tit {
     font-size: 20px;
     font-weight: 500;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 .tbl_card_list.type_02 a .tit span {
     margin-left: 5px;
@@ -3192,8 +3268,27 @@ a.ui-button:active,
     .tit_box.row .btn_box * {
         font-size: 15px;
     }
+    .tit_box.row.txt {
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+    .tit_box.row.txt h4 {
+        align-items: flex-start;
+    }
+    .tit_box.row.txt span {
+        text-align: right;
+        font-size: 15px;
+        font-weight: 400;
+    }
     .tit_box h5 {
         font-size: 16px;
+    }
+    .tit_box .sub_tit_box {
+        font-size: 14px;
+        margin-top: 0;
+    }
+    .tit_box h4 em {
+        font-size: 14px;
     }
 
     /* list 리스트 */
@@ -3241,6 +3336,9 @@ a.ui-button:active,
     }
     .content_list_box .content {
         padding: 15px;
+    }
+    .txt_p {
+        font-size: 14px;
     }
 
     /* sel_box 셀렉트박스 */
@@ -3349,10 +3447,17 @@ a.ui-button:active,
         width: 100%;
     }
     .inp_group.inp_txt {
+        flex-wrap: wrap;
         justify-content: center;
     }
     .inp_group.inp_txt .inp_box.min {
-        width: calc(100% - 17px);
+        width: calc(100% - 19px);
+    }
+    .inp_group.representative {
+        justify-content: center;
+    }
+    .inp_group.representative .inp_box {
+        width: calc(33.33% - 4px);
     }
 
     /* 테이블 */
