--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -1622,6 +1622,7 @@ a.ico_folder::after {
     padding-bottom: 10px;
 }
 .resume_list dl dt strong {
+    word-break: break-all;
     font-size: 20px;
     font-weight: 500;
 }
@@ -1632,6 +1633,7 @@ a.ico_folder::after {
     color: #666;
 }
 .resume_list dl dd ul li {
+    word-break: break-all;
     font-size: 14px;
     font-weight: 400;
     color: #666;
@@ -1645,6 +1647,7 @@ a.ico_folder::after {
     padding: 25px 45px;
     border-radius: 10px;
     box-sizing: border-box;
+    word-break: break-all;
     font-size: 14px;
     font-weight: 400;
     color: #666;
