정책페이지 완료 / 메인 비디오 수정 / 회원가입-제3자위탁동의 추가

--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -194,7 +194,7 @@ header.headerfix .header_top {
 }
 .swiper-container .slide_wrap .img video {
     width: 100%;
-    min-width: 2600px;
+    min-width: 150vw;
     height: auto;
     margin-left: 19%;
 }
