--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -659,6 +659,14 @@ header.font_black .btn_login_box li a::before {
     border-color: #0060ef;
     color: #0060ef;
 }
+.investment_content > ul > li:nth-child(1) .chart_area {
+    width: 100%;
+    height: 250px;
+}
+.investment_content > ul > li:nth-child(2) .chart_area {
+    width: 100%;
+    height: 195px;
+}
 .investment_list {
     margin-top: 40px;
     padding: 25px;
@@ -939,6 +947,88 @@ header.font_black .btn_login_box li a::before {
     width: auto;
     flex: none;
     padding: 10px 20px;
+}
+
+/* 정책 */
+.policy_list + .tit_box {
+    margin-top: 60px;
+}
+.policy_list {
+    display: flex;
+    gap: 20px;
+}
+.policy_list.type_02 {
+    gap: 10px;
+}
+.policy_list li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #d9e1e7;
+    border-radius: 5px;
+    box-shadow: 2px 2px 6px 0px rgb(0 0 0 / 5%);
+}
+.policy_list.type_02 li {
+    flex: 1;
+}
+.policy_list li a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 20px 20px;
+    transition: .2s;
+}
+.policy_list li:hover a {
+    background-color: rgb(247, 247, 247);
+}
+.policy_list li a::before {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 45px;
+    background: no-repeat center;
+    background-size: auto 100%;
+    margin-right: 10px;
+}
+.policy_list.type_01 li:nth-child(1) a::before {
+    background-image: url(../images/ico/ico_policy_01.png);
+}
+.policy_list.type_01 li:nth-child(2) a::before {
+    background-image: url(../images/ico/ico_policy_02.png);
+}
+.policy_list.type_01 li:nth-child(3) a::before {
+    background-image: url(../images/ico/ico_policy_03.png);
+}
+.policy_list.type_01 li:nth-child(4) a::before {
+    background-image: url(../images/ico/ico_policy_04.png);
+}
+
+.policy_list.type_02 li:nth-child(1) a::before {
+    background-image: url(../images/ico/ico_policy_05.png);
+}
+.policy_list.type_02 li:nth-child(2) a::before {
+    background-image: url(../images/ico/ico_policy_06.png);
+}
+.policy_list.type_02 li:nth-child(3) a::before {
+    background-image: url(../images/ico/ico_policy_07.png);
+}
+.policy_list.type_02 li:nth-child(4) a::before {
+    background-image: url(../images/ico/ico_policy_08.png);
+}
+.policy_list.type_02 li:nth-child(5) a::before {
+    background-image: url(../images/ico/ico_policy_09.png);
+    background-size: 100% auto;
+}
+.policy_list.type_02 li:nth-child(6) a::before {
+    background-image: url(../images/ico/ico_policy_10.png);
+    background-size: 100% auto;
+}
+.policy_list.type_02 li:nth-child(7) a::before {
+    background-image: url(../images/ico/ico_policy_11.png);
+}
+.policy_list.type_02 li:nth-child(8) a::before {
+    background-image: url(../images/ico/ico_policy_12.png);
 }
 
 /* 법령 */
@@ -5622,6 +5712,20 @@ footer .footer_bottom {
     .integrated_box .img {
         width: 100%;
         overflow: auto;
+    }
+
+    /* 정책 */ 
+    .policy_list {
+        flex-wrap: wrap;
+    }
+    .policy_list.type_01 {
+        gap: 10px;
+    }
+    .policy_list.type_01 li {
+        width: 100%;
+    }
+    .policy_list.type_02 li {
+        flex-basis: calc(50% - 10px);
     }
 
     /* 법령 */
