--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -1969,7 +1969,8 @@ a.ico_folder::after {
     gap: 50px;
     margin-bottom: 50px;
 }
-.investment_performance_box > div {
+.investment_performance_box .left,
+.investment_performance_box .right {
     width: calc(50% - 25px);
     padding: 30px;
     border: 1px solid #d9e0e6;
@@ -1980,8 +1981,16 @@ a.ico_folder::after {
     display: flex;
     flex-direction: column;
 }
+.investment_performance_box .all {
+    padding: 30px;
+    border: 1px solid #d9e0e6;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
 .investment_performance_box .chart {
+    width: 100%;
     height: 100%;
+    min-height: 300px;
 }
 .investment_performance_box .right .tbl_info_etc,
 .investment_performance_box .left .tbl_info_etc {
@@ -1993,6 +2002,13 @@ a.ico_folder::after {
 }
 .investment_performance_box > .all {
     width: 100%;
+}
+.investment_performance_box .all .chart {
+    width: 100%;
+    height: auto;
+    min-height: 300px;
+    background-color: #f5f5f5;
+    margin-bottom: 10px;
 }
 .investment_performance_box .all .tbl_info_etc {
     display: flex;
@@ -6007,7 +6023,8 @@ footer .footer_bottom {
         flex-direction: column;
         gap: 15px;
     }
-    .investment_performance_box > div {
+    .investment_performance_box .left,
+    .investment_performance_box .right {
         width: 100%;
         padding: 15px;
     }
