커뮤니티 수정

--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -1691,7 +1691,7 @@
 }
 .tbl_longcard > ul > li .tit strong a {
     display: block;
-    width: 75%;
+    max-width: 68%;
     word-break: break-all;
     font-size: 20px;
     font-weight: 500;
